src/snapshots/ledger_dashboard__ui__tests__snapshot_accounts_empty.snap
---
source: src/ui.rs
expression: render_to_string(&mut app)
---
  ⬡ Ledger Dashboard v0.1.0
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   Accounts   │   Monthly                                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Net Worth History [All]  ◀ ▶ ────────────────────────────────────────────────────────────────────────────────────────╮
│                                                    Not enough data                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Net Worth: 0,00 €                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Asset Balances  [Enter drill-down] ──────────────────────────────────────────────────────────────────────────────────╮
│Account                                            Balance (€)                                                        │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Test mode  [1-3] tab  [↑↓/jk] navigate  [←→/hl] month/range  [r] refresh  [?] help  [q] quit
